# htsjdk-rs

./: .gitignore  Cargo.toml  LICENSE  README.md
.github/workflows/: ci.yml
crates/htsjdk-bam/: Cargo.toml
crates/htsjdk-bam/src/: alignment_block.rs  bases.rs  bin.rs  build_index.rs  cigar.rs  coordinate.rs  fasta.rs  fastq.rs  gather.rs  header.rs  index.rs  interval.rs  lib.rs  liftover.rs  md_nm.rs  murmur3.rs  overlap.rs  pair.rs  query_name.rs  read_group_checksum.rs  reader.rs  record.rs  reheader.rs  sam_file.rs  sequence.rs  tag.rs  text.rs  text_parse.rs  writer.rs
crates/htsjdk-bam/tests/: bai_conformance.rs  bam_conformance.rs  bam_file_conformance.rs  build_index_conformance.rs  cigar_clip_conformance.rs  gather_conformance.rs  interval_conformance.rs  reheader_conformance.rs  rg_checksum_conformance.rs  sam_file_conformance.rs  sam_text_conformance.rs  set_mate_info_conformance.rs
crates/htsjdk-bgzf/: Cargo.toml
crates/htsjdk-bgzf/src/: lib.rs  read.rs  termination.rs  vfp.rs  write.rs
crates/htsjdk-bgzf/tests/: bgzf_conformance.rs  read_conformance.rs  termination_conformance.rs  zlib_conformance.rs
crates/htsjdk-bgzf/tests/fixtures/: big_l0.bgzf  big_l1.bgzf  big_l9.bgzf  exact1_l0.bgzf  exact1_l1.bgzf  exact1_l5.bgzf  exact1_l6.bgzf  exact1_l9.bgzf  incompr_l1.bgzf  multi_l0.bgzf  multi_l1.bgzf  multi_l5.bgzf  over1_l0.bgzf  over1_l1.bgzf  over1_l5.bgzf  over1_l6.bgzf  over1_l9.bgzf  tiny_l0.bgzf  tiny_l6.bgzf
crates/htsjdk-diff/: Cargo.toml
crates/htsjdk-metrics/: Cargo.toml
crates/htsjdk-vcf/: Cargo.toml
crates/jmath/: Cargo.toml
(+87 files in other folders)
