[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
license = "MIT"
repository = "https://github.com/IPNP-BIPN/htsjdk-rs"

# Reproducibility: see docs/decisions/0001-deflate-backend.md.
# flate2 MUST use the zlib backend. The default (miniz_oxide) emits valid but
# DIFFERENT deflate bytes, which breaks byte-identity silently.
[workspace.dependencies]
flate2 = { version = "1", default-features = false, features = ["zlib"] }
libz-sys = { version = "1", default-features = false, features = ["static"] }
