[package]
name = "htsjdk-bam"
version = "0.1.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "Byte-level port of htsjdk's BAM record codec"

[dependencies]
htsjdk-bgzf = { path = "../htsjdk-bgzf" }
md-5 = "0.10"

[dev-dependencies]
flate2.workspace = true
htsjdk-bgzf = { path = "../htsjdk-bgzf" }
