[package]
name = "htsjdk-bgzf"
version = "0.0.0"
edition.workspace = true
license.workspace = true
repository.workspace = true
description = "BGZF codec matching htsjdk's BlockCompressedOutputStream byte for byte"

[dependencies]
flate2.workspace = true
libz-sys.workspace = true

[dev-dependencies]
md-5 = "0.10"
